[gd_scene load_steps=23 format=3 uid="uid://bv7w3gyut4iqi"]

[ext_resource type="Texture2D" uid="uid://die4xb73hlnw7" path="res://Fourth_Level/Assets/Hand.png" id="1_bgbwd"]
[ext_resource type="FontFile" uid="uid://bhhtouvxxseif" path="res://First_Level/arcadeclassic/ARCADECLASSIC.TTF" id="1_cy1vt"]
[ext_resource type="Script" path="res://Fourth_Level/hand.gd" id="1_j8bdt"]
[ext_resource type="AudioStream" uid="uid://bxgpvot4t10g6" path="res://Fourth_Level/Assets/Contemplation - Mario Party DS.mp3" id="1_kocnl"]
[ext_resource type="Script" path="res://Fourth_Level/coins.gd" id="2_aleti"]
[ext_resource type="Texture2D" uid="uid://dbi7te5ydan8i" path="res://Fourth_Level/Assets/coins.png" id="3_ad6ry"]
[ext_resource type="Script" path="res://Fourth_Level/timer.gd" id="4_o1da5"]
[ext_resource type="Texture2D" uid="uid://codkulxijnshv" path="res://Fourth_Level/Assets/Pouch.png" id="4_offin"]
[ext_resource type="Script" path="res://Fourth_Level/pouch.gd" id="5_k2hqk"]
[ext_resource type="AudioStream" uid="uid://ng246tpwyudt" path="res://Fourth_Level/Assets/coin_success.mp3" id="5_leoer"]
[ext_resource type="Texture2D" uid="uid://bh26v7htpr0uv" path="res://Fourth_Level/Assets/PouchFull.png" id="5_wjcx5"]
[ext_resource type="Script" path="res://Fourth_Level/audio_stream_player_2d.gd" id="6_p7iyk"]
[ext_resource type="AudioStream" uid="uid://dhl62r34s1qwk" path="res://Fourth_Level/Assets/coin_fail.mp3" id="7_58qgw"]
[ext_resource type="Script" path="res://Fourth_Level/audio_stream_fail.gd" id="7_raqij"]
[ext_resource type="Texture2D" uid="uid://c1p1wop1ao60x" path="res://Fourth_Level/Assets/wood_bg.jpg" id="8_g1js7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnw3g"]
size = Vector2(1166, 30)

[sub_resource type="LabelSettings" id="LabelSettings_7krcv"]
font = ExtResource("1_cy1vt")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_wtxx3"]
font = ExtResource("1_cy1vt")
font_size = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slih5"]
size = Vector2(36, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_u84j2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_wjcx5")
}, {
"duration": 1.0,
"texture": ExtResource("4_offin")
}],
"loop": false,
"name": &"become_empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_offin")
}, {
"duration": 1.0,
"texture": ExtResource("5_wjcx5")
}],
"loop": false,
"name": &"become_full",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tj3bh"]
size = Vector2(63.0283, 76.1225)

[sub_resource type="LabelSettings" id="LabelSettings_vhqf6"]
font_size = 20
font_color = Color(0.0823529, 0.490196, 0.411765, 1)

[node name="Node2D" type="Node2D"]
position = Vector2(1, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_kocnl")
volume_db = -10.0
autoplay = true

[node name="Area2D Nothing" type="Area2D" parent="."]
position = Vector2(2, 646)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D Nothing"]
position = Vector2(573, 31)
shape = SubResource("RectangleShape2D_qnw3g")

[node name="Label" type="Label" parent="."]
offset_left = 8.0
offset_top = 12.0
offset_right = 115.0
offset_bottom = 35.0
text = "Coins left: X/Y
"
label_settings = SubResource("LabelSettings_7krcv")

[node name="Label2" type="Label" parent="."]
offset_left = 8.0
offset_top = 35.0
offset_right = 115.0
offset_bottom = 58.0
text = "Pouches left to make: X/5
"
label_settings = SubResource("LabelSettings_wtxx3")

[node name="Hand" type="Sprite2D" parent="."]
position = Vector2(612, 98)
texture = ExtResource("1_bgbwd")
script = ExtResource("1_j8bdt")

[node name="Coin" type="RigidBody2D" parent="."]
position = Vector2(577, 114)
freeze = true
continuous_cd = 2
script = ExtResource("2_aleti")

[node name="Icon" type="Sprite2D" parent="Coin"]
scale = Vector2(2, 1.772)
texture = ExtResource("3_ad6ry")
region_enabled = true
region_rect = Rect2(-0.178406, 0.214779, 18.5805, 17.3913)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin"]
shape = SubResource("RectangleShape2D_slih5")

[node name="Pouch" type="AnimatedSprite2D" parent="."]
position = Vector2(568.75, 552.313)
scale = Vector2(1.72436, 2.6315)
sprite_frames = SubResource("SpriteFrames_u84j2")
animation = &"become_full"
script = ExtResource("5_k2hqk")

[node name="Area2D" type="Area2D" parent="Pouch"]
position = Vector2(-2.42236, 11.3818)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pouch/Area2D"]
position = Vector2(-0.023407, -11.605)
shape = SubResource("RectangleShape2D_tj3bh")

[node name="smaller_pouch" type="Timer" parent="Pouch"]
wait_time = 0.9
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
script = ExtResource("4_o1da5")

[node name="WoodBg" type="Sprite2D" parent="."]
z_index = -15
position = Vector2(607.5, 330)
scale = Vector2(2.41882, 1.87778)
texture = ExtResource("8_g1js7")

[node name="MakePouch" type="Button" parent="."]
offset_left = 663.0
offset_top = 504.0
offset_right = 886.0
offset_bottom = 568.0
text = "POUCH FULL!
GRAB A NEW ONE"

[node name="SucessCoin" type="AudioStreamPlayer2D" parent="."]
position = Vector2(580.5, 430)
scale = Vector2(2.41882, 1.87778)
stream = ExtResource("5_leoer")
pitch_scale = 1.2
script = ExtResource("6_p7iyk")

[node name="SoundTimer" type="Timer" parent="SucessCoin"]
wait_time = 2.6
one_shot = true

[node name="FailCoin" type="AudioStreamPlayer2D" parent="."]
position = Vector2(576.5, 674)
scale = Vector2(2.41882, 1.87778)
stream = ExtResource("7_58qgw")
pitch_scale = 1.3
script = ExtResource("7_raqij")

[node name="WinButton" type="Button" parent="."]
offset_left = 455.0
offset_top = 240.0
offset_right = 695.0
offset_bottom = 344.0
text = "WELL DONE! LET'S GO
DISTRIBUTE THE COINS!"

[node name="ResetButton" type="Button" parent="."]
offset_left = 455.0
offset_top = 242.0
offset_right = 695.0
offset_bottom = 342.0
text = "YOU DID NOT MAKE
 ENOUGH COIN POUCHES!

TRY AGAIN"

[node name="Label3" type="Label" parent="."]
offset_left = 349.0
offset_top = 154.0
offset_right = 781.0
offset_bottom = 177.0
text = "PRESS JUMP OR LEFT CLICK TO START MAKING POUCHES"
label_settings = SubResource("LabelSettings_vhqf6")

[connection signal="body_entered" from="Area2D Nothing" to="Coin" method="_on_area_2d_nothing_body_entered"]
[connection signal="full_pouch" from="Coin" to="Pouch" method="_on_coin_full_pouch"]
[connection signal="no_speed_up" from="Coin" to="Timer" method="_on_coin_no_speed_up"]
[connection signal="no_speed_up" from="Coin" to="FailCoin" method="_on_coin_no_speed_up"]
[connection signal="speed_up" from="Coin" to="Hand" method="_on_coin_speed_up"]
[connection signal="speed_up" from="Coin" to="Timer" method="_on_coin_speed_up"]
[connection signal="speed_up" from="Coin" to="SucessCoin" method="_on_coin_speed_up"]
[connection signal="winpouch" from="Coin" to="Pouch" method="_on_coin_winpouch"]
[connection signal="dontplaysfx" from="Pouch" to="SucessCoin" method="_on_pouch_dontplaysfx"]
[connection signal="body_entered" from="Pouch/Area2D" to="Coin" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Pouch/smaller_pouch" to="Coin" method="_on_smaller_pouch_timeout"]
[connection signal="timeout" from="Timer" to="Coin" method="_on_timer_timeout"]
[connection signal="pressed" from="MakePouch" to="Coin" method="_on_make_pouch_pressed"]
[connection signal="timeout" from="SucessCoin/SoundTimer" to="SucessCoin" method="_on_sound_timer_timeout"]
[connection signal="pressed" from="WinButton" to="Coin" method="_on_win_button_pressed"]
[connection signal="pressed" from="ResetButton" to="Coin" method="_on_reset_button_pressed"]
